# CourseWork

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  logger.py  models.py  tasks.py  urls.py  views.py
mailing/management/commands/: create_manager_group.py  send_mailings.py  setup_data.py
mailing/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html
templates/mailing/: attempt_list.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html  send_mailing.html
templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_email.html  profile.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
